--- a/app/src/main/res/layout/activity_details_activity.xml
+++ b/app/src/main/res/layout/activity_details_activity.xml
@@ -17,9 +17,7 @@
             android:id="@+id/tvtitle"
             android:layout_width="0dp"
             android:layout_height="100dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             android:background="#009587"
             android:elevation="6dp"
             android:gravity="left|center"
@@ -73,34 +71,34 @@
             app:layout_constraintHorizontal_bias="0.111"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
             app:layout_constraintTop_toBottomOf="@+id/tvtitle"
-            app:layout_constraintVertical_chainStyle="spread_inside" />
+            app:layout_constraintVertical_chainStyle="spread" />
 
         <TextView
             android:id="@+id/tvrating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="47dp"
-            android:layout_marginEnd="127dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="@string/title"
             android:textColor="@color/textcolor"
             android:textSize="@dimen/textsize"
             app:layout_constraintBottom_toTopOf="@+id/btnfav"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.033"
+            app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintStart_toEndOf="@+id/guideline2"
             app:layout_constraintTop_toBottomOf="@+id/tvdate" />
 
 
         <Button
             android:id="@+id/btnfav"
-            android:layout_width="wrap_content"
-            android:layout_height="39dp"
+            android:layout_width="80dp"
+            android:layout_height="41dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:background="@color/colorPrimaryDark"
-            android:text="@string/add_to_favorites"
+            android:text="Mark as favorite"
             android:textColor="@color/textcolor"
             android:textSize="@dimen/textsize"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
@@ -114,7 +112,9 @@
             android:id="@+id/tvoverview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:textColor="@color/textcolor"
             android:textSize="@dimen/textsize"
