--- a/app/src/main/res/layout/review_layout.xml
+++ b/app/src/main/res/layout/review_layout.xml
@@ -10,6 +10,7 @@
         android:id="@+id/tvwriter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:maxWidth="80sp"
         android:text="@string/app_name"
         android:textColor="@color/textcolor"
