--- a/app/src/main/res/layout/trailers_layout.xml
+++ b/app/src/main/res/layout/trailers_layout.xml
@@ -12,6 +12,8 @@
         android:id="@+id/imageView"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:contentDescription="@string/des"
         android:gravity="center"
         android:src="@drawable/ic_icons8_play_button"
@@ -26,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/title"
         android:textColor="@color/textcolor"
         android:textSize="@dimen/textsize"
