--- a/app/src/main/res/layout/activity_details_activity.xml
+++ b/app/src/main/res/layout/activity_details_activity.xml
@@ -93,7 +93,7 @@
         <Button
             android:id="@+id/btnfav"
             android:layout_width="80dp"
-            android:layout_height="41dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
